--- a/react-relay/package.json
+++ b/react-relay/package.json
@@ -14,6 +14,7 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-relay-plugin": "^0.9.0",
     "compression": "^1.6.2",
+    "cross-env": "^2.0.0",
     "css-loader": "^0.23.1",
     "exports-loader": "^0.6.3",
     "express": "^4.14.0",
